--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "react": "^19.1.0",
+    "react-barcode": "^1.6.1",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^6.30.1"
+    "react-qr-code": "^2.0.16",
+    "react-router-dom": "^6.30.1",
+    "vite-plugin-pwa": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
